Fixed text overflow issue

--- a/src/assets/stylesheets/home.css
+++ b/src/assets/stylesheets/home.css
@@ -34,6 +34,7 @@
     font-size: 25px;
     font-weight: bold;
     font-family: Arial, Helvetica, sans-serif;
+    overflow-x: auto;
 }
 
 .room_list {
